<resources>
    <string name="app_name">firstAppKotlin</string>
    <string name="type_your_name">Type your name</string>
    <string name="send">Send</string>
    <string name="hello_world">Hello World!</string>
    <string name="hello_name">Hello, %1$s!!</string>
    <string name="title_activity_drawer" translatable="false">drawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="send_to_result_screen">Send to Result Screen</string>
    <string name="resultado" translatable="false">Resultado</string>
    <string name="get_result">Get Result</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="Activity_was_cancelled">Activity was cancelled</string>
    <string name="data_received">Data received: %1$s</string>

</resources>